# autoidm-tap-bamboohr

./: .gitignore  .gitlab-ci.yml  LICENSE  README.md  meltano.yml  pyproject.toml  tap-bamboohr.sh  tox.ini
tap_bamboohr/: client.py  field_types.json  selected_fields.json  streams.py  tap.py
tap_bamboohr/schemas/: directory.json  employeeassets.json  employmentstatus.json  jobinfo.json  lists.json  locations.json  photos.json  photos_users.json  time_off_requests.json  whos_out.json
