[tool.poetry]
name = "tap-bamboohr"
version = "0.0.0"  # Not used. Our version is managed with poetry_dynamic_versioning.
description = "`tap-bamboohr` is Singer-compliant BambooHR tap built with Singer SDK."
authors = ["Derek Visch <dvisch@autoidm.com>"]
license = "Apache v2"

[tool.poetry.dependencies]
python = "<3.11,>=3.7.1"
requests = "^2.25.1"
singer-sdk = "0.29.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
tox = "^3.24.4"
flake8 = "^3.9.2"
ruff = "~=0.3.0"
black = "~=22.0"
pydocstyle = "^6.1.1"
mypy = "^0.910"
types-requests = "^2.26.1"
isort = "^5.10.1"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_bamboohr"

[build-system]
requires = ["poetry-core>=1.9.0", "poetry-dynamic-versioning>=1.4.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "semver"

[tool.poetry.scripts]
# CLI declaration
tap-bamboohr = 'tap_bamboohr.tap:cli'
